Bug 40408 - piglit fbo-blending-formats regression
Summary: piglit fbo-blending-formats regression
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: 7.10
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Brian Paul
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-26 14:25 UTC by Vinson Lee
Modified: 2012-09-10 14:11 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments

Description Vinson Lee 2011-08-26 14:25:04 UTC
piglit fbo-alphatest-formats now fails on softpipe and llvmpipe. It last passed
on the 7.9 branch.

mesa: 3bcb9a858f482c21bc7c4d0fcd3571e25ea95090 (master) - fail
mesa: 6c1a9a327d031cd46680f28de8636b9335847650 (7.11) - fail
mesa: 7c3cf50d9988d721e79277180e29aaf6afa40be5 (7.10) - fail
mesa: 5078cb68586a52e2a2a991c6e89ed42e8bac7d96 (7.9) - pass


$ ./bin/fbo-blending-formats -auto
Using test set: Core formats
Testing 3
Testing 4
Testing GL_RGB
Testing GL_RGBA
Testing GL_ALPHA
Testing GL_LUMINANCE
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 1.000000
  Observed: 0.678431 0.678431 0.678431 1.000000
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 1.000000
  Observed: 0.560784 0.560784 0.560784 1.000000
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.729412 0.729412 0.729412 1.000000
  when testing FBO result, blending with SRC_COLOR.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.721569 0.721569 0.721569 1.000000
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE_ALPHA
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.500000
  Observed: 0.678431 0.678431 0.678431 0.501961
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.700000
  Observed: 0.560784 0.560784 0.560784 0.698039
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.729412 0.729412 0.729412 0.741176
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.850000 0.850000 0.850000 0.700000
  Observed: 0.600000 0.600000 0.600000 0.698039
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.721569 0.721569 0.721569 0.741176
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_INTENSITY
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.480000
  Observed: 0.501961 0.501961 0.501961 0.501961
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_ALPHA4
Testing GL_ALPHA8
Testing GL_ALPHA12
Testing GL_ALPHA16
Testing GL_LUMINANCE4
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 1.000000
  Observed: 0.678431 0.678431 0.678431 1.000000
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 1.000000
  Observed: 0.560784 0.560784 0.560784 1.000000
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.729412 0.729412 0.729412 1.000000
  when testing FBO result, blending with SRC_COLOR.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.721569 0.721569 0.721569 1.000000
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE8
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 1.000000
  Observed: 0.678431 0.678431 0.678431 1.000000
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 1.000000
  Observed: 0.560784 0.560784 0.560784 1.000000
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.729412 0.729412 0.729412 1.000000
  when testing FBO result, blending with SRC_COLOR.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.721569 0.721569 0.721569 1.000000
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE12
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 1.000000
  Observed: 0.679988 0.679988 0.679988 1.000000
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 1.000000
  Observed: 0.559991 0.559991 0.559991 1.000000
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.729992 0.729992 0.729992 1.000000
  when testing FBO result, blending with SRC_COLOR.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.719997 0.719997 0.719997 1.000000
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE16
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 1.000000
  Observed: 0.679988 0.679988 0.679988 1.000000
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 1.000000
  Observed: 0.559991 0.559991 0.559991 1.000000
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.729992 0.729992 0.729992 1.000000
  when testing FBO result, blending with SRC_COLOR.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 1.000000
  Observed: 0.719997 0.719997 0.719997 1.000000
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE4_ALPHA4
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.700000
  Observed: 0.533333 0.533333 0.533333 0.666667
  when testing FBO result, blending with DST_COLOR.
Probe at (96,0)
  Expected: 0.850000 0.850000 0.850000 0.700000
  Observed: 0.600000 0.600000 0.600000 0.666667
  when testing FBO result, blending with DST_ALPHA.
Testing GL_LUMINANCE8_ALPHA8
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.500000
  Observed: 0.678431 0.678431 0.678431 0.501961
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.700000
  Observed: 0.560784 0.560784 0.560784 0.698039
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.729412 0.729412 0.729412 0.741176
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.850000 0.850000 0.850000 0.700000
  Observed: 0.600000 0.600000 0.600000 0.698039
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.721569 0.721569 0.721569 0.741176
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE12_ALPHA12
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.500000
  Observed: 0.679988 0.679988 0.679988 0.499992
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.700000
  Observed: 0.559991 0.559991 0.559991 0.699992
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.729992 0.729992 0.729992 0.739986
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.850000 0.850000 0.850000 0.700000
  Observed: 0.600000 0.600000 0.600000 0.699992
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.719997 0.719997 0.719997 0.739986
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_LUMINANCE16_ALPHA16
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.500000
  Observed: 0.679988 0.679988 0.679988 0.499992
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.700000
  Observed: 0.559991 0.559991 0.559991 0.699992
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.729992 0.729992 0.729992 0.739986
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.850000 0.850000 0.850000 0.700000
  Observed: 0.600000 0.600000 0.600000 0.699992
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.740000
  Observed: 0.719997 0.719997 0.719997 0.739986
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_INTENSITY4
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.480000
  Observed: 0.501961 0.501961 0.501961 0.501961
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_INTENSITY8
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.480000
  Observed: 0.501961 0.501961 0.501961 0.501961
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.698039 0.698039 0.698039 0.698039
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.741176 0.741176 0.741176 0.741176
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_INTENSITY12
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.480000
  Observed: 0.499992 0.499992 0.499992 0.499992
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.699992 0.699992 0.699992 0.699992
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.739986 0.739986 0.739986 0.739986
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.699992 0.699992 0.699992 0.699992
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.739986 0.739986 0.739986 0.739986
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_INTENSITY16
Probe at (32,0)
  Expected: 0.480000 0.480000 0.480000 0.480000
  Observed: 0.499992 0.499992 0.499992 0.499992
  when testing FBO result, blending with CONSTANT_COLOR.
Probe at (53,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.699992 0.699992 0.699992 0.699992
  when testing FBO result, blending with DST_COLOR.
Probe at (74,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.739986 0.739986 0.739986 0.739986
  when testing FBO result, blending with SRC_COLOR.
Probe at (96,0)
  Expected: 0.810000 0.810000 0.810000 0.810000
  Observed: 0.699992 0.699992 0.699992 0.699992
  when testing FBO result, blending with DST_ALPHA.
Probe at (117,0)
  Expected: 0.760000 0.760000 0.760000 0.760000
  Observed: 0.739986 0.739986 0.739986 0.739986
  when testing FBO result, blending with SRC_ALPHA.
Testing GL_R3_G3_B2
Testing GL_RGB4
Testing GL_RGB5
Testing GL_RGB8
Testing GL_RGB10
Testing GL_RGB12
Testing GL_RGB16
Testing GL_RGBA2
Testing GL_RGBA4
Testing GL_RGB5_A1
Testing GL_RGBA8
Testing GL_RGB10_A2
Testing GL_RGBA12
Testing GL_RGBA16
PIGLIT: {'result': 'fail' }
Comment 1 Brian Paul 2011-09-15 10:42:28 UTC
Softpipe is fixed with commit a7109a31999f78a1184346f423a8df15be18d570.

Similar changes will be needed for llvmpipe.
Comment 2 Jose Fonseca 2011-09-16 08:13:41 UTC
(In reply to comment #1)
> Softpipe is fixed with commit a7109a31999f78a1184346f423a8df15be18d570.
> 
> Similar changes will be needed for llvmpipe.

Yes, src/gallium/drivers/llvmpipe/lp_state_fs.c:generate_blend() should take in consideration the replicating swizzles of the format, and we should be only swizzling the logical channels.
Comment 3 Vinson Lee 2011-10-25 09:31:20 UTC
mesa: 05720e14ba1072c547fc2388738ed4f70a6630b6 (master)

Verified that fbo-blending-formats passes with softpipe. The test still fails on llvmpipe.
Comment 4 Andreas Boll 2012-09-10 14:11:22 UTC
works with softpipe and llvmpipe on
mesa master e81ee67b51651e99e7e8e52c1ccafc66835d57cd
and mesa 8.0.4


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.